Fix Profile container spacing

--- a/clickable-prototype/pages/assets/css/style.css
+++ b/clickable-prototype/pages/assets/css/style.css
@@ -269,7 +269,7 @@ label.form-check-label:focus,
 
 /* local styles - user profile */
 .user-profile-container {
-    height: 600px;
+    max-height: 600px;
     width: 100%;
     object-fit: cover;
 }
